2003-06-23  Vincent Favre-Nicolin  <vincefn@users.sourceforge.net>
   * doc/Doxyfile-man, src/main.cpp, Doxyfile: Added the man page
   in doxygen format in main.cpp, for automatic generation of the 
   man page from the source code, using 'Doxygen Doxyfile-man' in the
   doc/ directory. Normal Doxygen run now skips src/main.cpp

2003-06-23  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* doc/babel.1: Update with current command-line options and file
	formats.

	* doc/FAQ.html, doc/Migration.html: Use HTML versions from the
	website rather than text versions.

	* doc/Makefile.in, doc/Makefile.am: Update accordingly.

	* src/cml.cpp(CleanUp): New method to clean up global vector
	variables after ReadCML() and WriteCML() in attempt to fix
	PR#736001. Does not change normal command-line path, but should
	fix library useage when multiple files may be loaded.
	
2003-06-22  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/main.cpp: Updated to use OBMolVector for importing multiple
	molecules in a file. Emulates behavior of babel, but improvements
	are needed. (e.g. some formats like separators if it's a
	multi-molecule file.) Also added -f (first) and -l (last)
	flags to pick particular molecules. Fixes feature request
	PR#575243.

	* src/molvector.h, src/molvector.cpp: Add new PushMol method for
	adding new molecules to the end of the vector. Improve Write
	support and clean up overloaded methods--instead use default
	values.

	* src/*.txt: Updated copyright information.
	* src/*.cpp, src/*.h: Ditto. (As needed)

2003-06-15  Michael Banck  <mbanck@gmx.net>

	* src/pdb.cpp (WritePDB): Cast atom->GetValence() to int to avoid
	signed/unsigned comparison.
	* src/ring.cpp (OBRingSearch::RemoveRedundant): Remove register
	attribute for i and j to suppress a warning.
	(OBRingSearch::AddRingFromClosure): Remove unused parameter 
	`int level'.
	* src/ring.h (AddRingFromClosure): Remove unused parameter `int'.  